--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
   },
   "require": {
     "php": "^7.3 || ~8.0.0",
-    "ext-json": "*",
-    "pimple/pimple": "3.3.x-dev"
+    "ext-json": "*"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.17@dev",
