--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.17@dev",
-    "phpunit/phpunit": "^9"
+    "phpunit/phpunit": "^9",
+    "phpbench/phpbench": "^1.1"
   },
   "autoload": {
     "psr-4": {
