Add benchmark to CI

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,10 @@
       "php-cs-fixer fix --using-cache=no tests/"
     ],
     "test": [
-      "XDEBUG_MODE=coverage vendor/bin/phpunit"
+      "XDEBUG_MODE=coverage ./vendor/bin/phpunit"
+    ],
+    "benchmark" : [
+      "./vendor/bin/phpbench run --report=env --progress=dots"
     ],
     "fix-code": [
       "php-cs-fixer fix --using-cache=no src/",
