--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,5 @@ jobs:
       run: composer install --prefer-dist --no-progress
 
     - run: composer run-script test
+
+    - run: composer run-script benchmark
