--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,66 @@ on:
     branches: [ main ]
 
 jobs:
+  composer-validate:
+    name: "Composer Validate ${{ matrix.php-version }}"
+
+    runs-on: "ubuntu-latest"
+
+    strategy:
+      matrix:
+        php-version:
+          - '7.4'
+
+    steps:
+      - name: "Checkout code"
+        uses: "actions/checkout@v2"
+
+      - name: "Install PHP"
+        uses: "shivammathur/setup-php@v2"
+        with:
+          coverage: "none"
+          php-version: "${{ matrix.php-version }}"
+          tools: composer:v2
+
+      - name: "Validate composer.json"
+        run: "composer validate --strict --no-check-lock"
+
+    phpstan:
+      needs:
+        - "composer-validate"
+
+      name: "PHPStan (${{ matrix.php-version }})"
+
+      runs-on: "ubuntu-latest"
+
+      strategy:
+        matrix:
+          php-version:
+            - '7.4'
+
+      steps:
+        - name: "Checkout code"
+          uses: "actions/checkout@v2"
+
+        - name: "Install PHP"
+          uses: "shivammathur/setup-php@v2"
+          with:
+            coverage: "none"
+            php-version: "${{ matrix.php-version }}"
+            tools: composer:v2
+
+        - name: "Composer install"
+          uses: "ramsey/composer-install@v1"
+          with:
+            composer-options: "--no-scripts"
+
+        - name: "Run phpstan/phpstan"
+          run: "vendor/bin/phpstan analyse -c phpstan.neon.dist"
+
   tests:
-    name: "PHP ${{ matrix.php-version }} + ${{ matrix.dependency }}"
+    name: "Tests PHP ${{ matrix.php-version }} + ${{ matrix.dependency }}"
+    needs:
+      - "composer-validate"
     runs-on: ubuntu-latest
 
     strategy:
