Fix code submit

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   CODECOV_TOKEN: 08d85771-8ca8-4247-be7d-dc66c6742a5a
+
 jobs:
   composer-validate:
     name: "Composer Validate ${{ matrix.php-version }}"
@@ -105,4 +106,4 @@ jobs:
       - run: composer run-script benchmark
 
       - name: Submit code coverage
-        run: "bash <(curl -s https://codecov.io/bash) -t ${{ env.$CODECOV_TOKEN }} -f tests/output/clover.xml"
+        run: bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOKEN -f tests/output/clover.xml
