--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,9 @@ jobs:
           - '7.3'
           - '7.4'
           - '8.0'
+        include:
+          - php-version: '8.0'
+            submit-coverage: 'yes'
 
     steps:
       - name: "Checkout code"
@@ -106,4 +109,5 @@ jobs:
       - run: composer run-script benchmark
 
       - name: Submit code coverage
+        if: matrix.submit-coverage = 'yes'
         run: bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOKEN -f tests/output/clover.xml
