--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
           composer-options: "--no-scripts"
 
       - name: "Run friendsofphp/php-cs-fixer"
-        run: check-code-standards
+        run: composer run-script check-code-standards
 
   phpstan:
     needs:
