--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,6 +146,7 @@ jobs:
 
   docker:
     name: "Build and push Docker container"
+    environment: CI
     needs:
       - "tests"
     runs-on: ubuntu-latest
