--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -172,4 +172,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: user/app:latest
+          tags: hxtree/luckbydice:latest
