--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,7 +140,11 @@ jobs:
 
       - run: composer run-script benchmark
 
-      - run: ${{ GITHUB_WORKSPACE }}/bin/luckbydice 1d2,3d6*2+2 0
+      - name: Run bin test
+        run: |
+          chmod +x ./bin/luckbydice
+          ./bin/luckbydice 1d2,3d6*2+2 0
+        shell: bash
 
       - name: Submit code coverage
         if: matrix.submit-coverage == 'yes'
