--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -141,7 +141,7 @@ jobs:
       - run: composer run-script benchmark
 
       - name: Run bin test
-        run: ./bin/luckbydice 1d2,3d6*2+2 0
+        run: php ./bin/luckbydice 1d2,3d6*2+2 0
         shell: bash
 
       - name: Submit code coverage
