--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,9 +6,6 @@ on:
   pull_request:
     branches: [ main ]
 
-env:
-  CODECOV_TOKEN: 08d85771-8ca8-4247-be7d-dc66c6742a5a
-
 jobs:
   composer-validate:
     name: "Composer Validate ${{ matrix.php-version }}"
@@ -146,7 +143,7 @@ jobs:
 
       - name: Submit code coverage
         if: matrix.submit-coverage == 'yes'
-        run: bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOKEN -f tests/output/clover.xml
+        run: bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }} -f tests/output/clover.xml
 
 
   docker:
