--- a/.github/workflows/packagist.yml
+++ b/.github/workflows/packagist.yml
@@ -2,7 +2,7 @@ name: Package Test
 
 on:
   schedule:
-    - cron:  '1/13 * * * *'
+    - cron:  '33 5,17 * * *'
 jobs:
    package-test:
     name: "Composer package install test"
