--- a/.github/workflows/packagist.yml
+++ b/.github/workflows/packagist.yml
@@ -16,4 +16,4 @@ jobs:
         uses: "actions/checkout@v2"
 
       - name: Install dependencies
-        run: composer install ouxsoft/luckbydice --no-dev
+        run: composer require ouxsoft/luckbydice
