--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main , release/* ]
   pull_request:
     branches: [ main ]
 
@@ -179,6 +179,7 @@ jobs:
     name: "Deploy to Fargate"
     needs:
       - "tests"
+    continue-on-error: true
     runs-on: ubuntu-latest
     steps:
       - name: Configure AWS credentials
@@ -221,3 +222,31 @@ jobs:
           service: keepers-cradle-service
           cluster: keepers-cradle-cluster
           wait-for-service-stability: true
+
+  notify-slack:
+    name: Notify slack
+    runs-on: ubuntu-latest
+    env:
+      REPOSITORY_URL: docker.pkg.github.com
+      IMAGE_NAME: ${{ github.repository }}/alerta-cli
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+    steps:
+      - uses: act10ns/slack@v1
+        with:
+          status: starting
+          channel: '#luckbydice'
+        if: always()
+
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Variables
+        id: vars
+        run: echo "::set-output name=SHORT_COMMIT_ID::$(git rev-parse --short HEAD)"
+
+      - uses: act10ns/slack@v1
+        with:
+          status: ${{ job.status }}
+          steps: ${{ toJson(steps) }}
+          channel: '#workflows'
+        if: always()
