--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -194,15 +194,31 @@ jobs:
           tags: ouxsoft/luckbydice:latest
           target: standard
 
-  notify-slack:
-    name: Notify slack
+  slack-reaction:
     runs-on: ubuntu-latest
+    name: "Notify Slack"
+
     steps:
-      - name: "Post to the #LuckByDice channel"
-        id: slack
-        uses: slackapi/slack-github-action@v1.14.0
+      - name: Send Slack Message
+        uses: archive/github-actions-slack@v2.0.0
+        id: send-message
+
         with:
-          channel-id: '#luckbydice'
-          slack-message: CI Build Init ${{ job.status }}
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          slack-function: send-message
+          slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
+          slack-channel: ${{ secrets.SLACK_CHANNEL_ID }}
+          slack-text: CI Build
+
+      - name: Send Slack Message Result
+        run: echo "Data - ${{ steps.send-message.outputs.slack-result }}"
+      - name: Send Slack Reaction To Message
+        uses: archive/github-actions-slack@v2.0.0
+        with:
+          slack-function: send-reaction
+          slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
+          slack-channel: ${{ fromJson(steps.send-message.outputs.slack-result).response.channel }}
+          slack-emoji-name: thumbsup
+          slack-message-timestamp: ${{ fromJson(steps.send-message.outputs.slack-result).response.message.ts }}
+
+      - name: Send Slack Reaction To Message Result
+        run: echo "Data - ${{ steps.send-message.outputs.slack-result }}"
