--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -197,28 +197,13 @@ jobs:
   slack-reaction:
     runs-on: ubuntu-latest
     name: "Notify Slack"
-
     steps:
-      - name: Send Slack Message
+      - name: Send message to Slack API
         uses: archive/github-actions-slack@v2.0.0
-        id: send-message
-
+        id: notify
         with:
-          slack-function: send-message
           slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
           slack-channel: ${{ secrets.SLACK_CHANNEL_ID }}
-          slack-text: CI Build
-
-      - name: Send Slack Message Result
-        run: echo "Data - ${{ steps.send-message.outputs.slack-result }}"
-      - name: Send Slack Reaction To Message
-        uses: archive/github-actions-slack@v2.0.0
-        with:
-          slack-function: send-reaction
-          slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
-          slack-channel: ${{ fromJson(steps.send-message.outputs.slack-result).response.channel }}
-          slack-emoji-name: thumbsup
-          slack-message-timestamp: ${{ fromJson(steps.send-message.outputs.slack-result).response.message.ts }}
-
-      - name: Send Slack Reaction To Message Result
-        run: echo "Data - ${{ steps.send-message.outputs.slack-result }}"
+          slack-text: Event "${{ github.event_name }}" in "${{ github.repository }}"
+      - name: Result from "Send Message"
+        run: echo "The result was ${{ steps.notify.outputs.slack-result }}"
