--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -204,4 +204,4 @@ jobs:
         with:
           slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
           slack-channel: ${{ secrets.SLACK_CHANNEL_ID }}
-          slack-text: Event "${{ github.event_name }}" in "${{ github.repository }} by @${{ github.actor }}"
+          slack-text: Event "${{ github.event_name }}" in "${{ github.repository }}" by @${{ github.actor }}
