--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,6 +147,8 @@ jobs:
   docker-validate:
     name: "Validate Dockerfile"
     needs:
+      - "phpstan"
+      - "php-cs-fixer"
       - "tests"
     runs-on: ubuntu-latest
     steps:
@@ -167,12 +169,10 @@ jobs:
     environment: CI
     needs:
       - "docker-validate"
-      - "tests"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -195,13 +195,24 @@ jobs:
           target: standard
 
   slack-reaction:
-    runs-on: ubuntu-latest
     name: "Notify Slack"
+    runs-on: ubuntu-latest
+    needs:
+      - "docker-validate"
     steps:
       - name: Send message to Slack API
+        if: always()
         uses: archive/github-actions-slack@v2.0.0
         id: notify
         with:
           slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
           slack-channel: ${{ secrets.SLACK_CHANNEL_ID }}
-          slack-text: Event "${{ github.event_name }}" in "${{ github.repository }}" by @${{ github.actor }}
+          slack-emoji-name: green_circle
+          slack-text: |
+            Event "${{ github.event_name }}" in "${{ github.repository }}" by @${{ github.actor }}
+            {{ steps.composer-validate.outputs.result == 'success' }} composer-validate
+            {{ steps.php-cs-fixer.outputs.result == 'success' }} php-cs-fixer
+            {{ steps.phpstan.outputs.result == 'success' }} phpstan
+            {{ steps.tests.outputs.result == 'success' }} tests
+            {{ steps.docker-validate.outputs.result == 'success' }} docker-validate
+            {{ steps.docker-hub.outputs.result == 'success' }} docker-hub
