--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,6 @@ jobs:
           tools: composer:v2
 
       - name: "Validate composer.json"
-        id: composer-validate-check
         run: "composer validate --strict --no-check-lock"
 
   php-cs-fixer:
@@ -62,7 +61,6 @@ jobs:
           composer-options: "--no-scripts"
 
       - name: Run Code Standard Test
-        id: php-code-standard-test-check
         run: composer run-script check-code-standards
 
   phpstan:
@@ -95,10 +93,9 @@ jobs:
           composer-options: "--no-scripts"
 
       - name: PHPStan Test
-        id: phpstan-test-check
         run: composer run-script analyze
 
-  test-suite:
+  php-test-suite:
     name: "Tests PHP ${{ matrix.php-version }} + ${{ matrix.dependency }}"
     needs:
       - "composer-validate"
@@ -126,7 +123,6 @@ jobs:
         run: composer validate --strict
 
       - name: Cache Composer packages
-        id: composer-cache
         uses: actions/cache@v2
         with:
           path: vendor
@@ -138,15 +134,12 @@ jobs:
         run: composer install --prefer-dist --no-progress
 
       - name: Run PHP Unit Tests
-        id: php-unit-test-check
         run: composer run-script test
 
       - name: Run PHP Benchmark Tests
-        id: php-benchmark-test-check
         run: composer run-script benchmark
 
       - name: Run LuckByDice bin test
-        id: php-bin-check
         run: php ./bin/luckbydice 1d2,3d6*2+2 0
 
       - name: Submit code coverage
@@ -156,20 +149,18 @@ jobs:
   dockerfile-validate:
     name: "Validate Dockerfile"
     needs:
-      - "phpstan"
-      - "php-cs-fixer"
-      - "test-suite"
+      - phpstan
+      - php-cs-fixer
+      - php-test-suite
     runs-on: ubuntu-latest
     steps:
       - name: Get files changed
-        id: changed-files
         uses: tj-actions/changed-files@v2.1
 
       - uses: actions/checkout@v2
         if: contains(steps.changed-files.outputs.modified_files, 'Dockerfile')
 
       - uses: hadolint/hadolint-action@v1.5.0
-        id: dockerfile-validate-check
         if: contains(steps.changed-files.outputs.modified_files, 'Dockerfile')
         with:
           dockerfile: Dockerfile
@@ -197,7 +188,6 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
-        id: docker-hub-check
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -205,70 +195,31 @@ jobs:
           tags: ouxsoft/luckbydice:latest
           target: standard
 
-  slack-reaction:
-    name: "Notify Slack"
+  slack-notification:
+    name: "Slack Notification"
     runs-on: ubuntu-latest
-    needs:
-      - "docker-hub"
-    steps:
-      - name: Send message to Slack API
-        if: always()
-        uses: archive/github-actions-slack@v2.0.0
-        id: notify
-        with:
-          slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
-          slack-channel: ${{ secrets.SLACK_CHANNEL_ID }}
-          slack-emoji-name: green_circle
-          slack-text: |
-            Event "${{ github.event_name }}" in "${{ github.repository }}" by @${{ github.actor }}
-            {{ github.sha }}
-            ${{ steps.composer-validate-check.outcome == 'success' && ':large_green_circle:' || ':red-circle:' }} Composer Validate
-            ${{ steps.php-code-standard-test-check.outcome}} PHP CS Fixer Test
-            ${{ steps.phpstan-test-check.outcome }} PHPStan Test
-            ${{ steps.php-unit-test-check.outcome }} PHP Unit Test Check
-            ${{ steps.php-benchmark-test-check.outcome }} PHP Benchmark Test Check
-            ${{ steps.php-bin-check.outcome }} PHP Bin Check
-            ${{ steps.dockerfile-validate-check.outcome }} Docker Validate
-            ${{ steps.docker-hub-check.outcome }} Docker Hub
-
-
-
-  one:
-    if: always()
-    runs-on: ubuntu-20.04
     needs:
       - composer-validate
       - php-cs-fixer
       - phpstan
-      - test-suite
-      - docker-hub
+      - php-test-suite
       - dockerfile-validate
+      - docker-hub
     steps:
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-      - name: Dump job context
-        env:
-          JOB_CONTEXT: ${{ toJson(job) }}
-        run: echo "$JOB_CONTEXT"
-      - name: Dump steps context
-        env:
-          STEPS_CONTEXT: ${{ toJson(steps) }}
-        run: echo "$STEPS_CONTEXT"
-      - name: Dump runner context
-        env:
-          RUNNER_CONTEXT: ${{ toJson(runner) }}
-        run: echo "$RUNNER_CONTEXT"
-      - name: Dump strategy context
-        env:
-          STRATEGY_CONTEXT: ${{ toJson(strategy) }}
-        run: echo "$STRATEGY_CONTEXT"
-      - name: Dump matrix context
-        env:
-          MATRIX_CONTEXT: ${{ toJson(matrix) }}
-        run: echo "$MATRIX_CONTEXT"
-      - name: Needs
-        env:
-          NEEDS_CONTEXT: ${{ toJson(needs) }}
-        run: echo "$NEEDS_CONTEXT"
+      - name: Send message to Slack API
+        if: always()
+        uses: archive/github-actions-slack@v2.0.0
+        with:
+          slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
+          slack-channel: ${{ secrets.SLACK_CHANNEL_ID }}
+          slack-emoji-name: green_circle
+          slack-optional-icon_emoji: ":fire:"
+          slack-text: |
+            Event "${{ github.event_name }}" in "${{ github.repository }}" by @${{ github.actor }}
+            Commit ${{ github.sha }}
+            ${{ needs.composer-validate.result == 'success' && ':large_green_circle:' || ':red-circle:' }} Composer Validate
+            ${{ needs.php-cs-fixer.result == 'success' && ':large_green_circle:' || ':red-circle:' }} PHP CS Fixer
+            ${{ needs.phpstan.result == 'success' && ':large_green_circle:' || ':red-circle:' }} PHP Stan
+            ${{ needs.php-test-suite.result == 'success' && ':large_green_circle:' || ':red-circle:' }} PHP Test Suite
+            ${{ needs.dockerfile-validate.result == 'success' && ':large_green_circle:' || ':red-circle:' }} Docker Validate
+            ${{ needs.docker-hub.result == 'success' && ':large_green_circle:' || ':red-circle:' }} Docker Hub
