--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,41 +9,35 @@ on:
 jobs:
   composer-validate:
     name: "Composer Validate ${{ matrix.php-version }}"
-
     runs-on: "ubuntu-latest"
-
     strategy:
       matrix:
         php-version:
           - '7.4'
 
     steps:
-      - name: "Checkout code"
+      - name: Checkout code
         uses: "actions/checkout@v2"
 
-      - name: "Install PHP"
+      - name: Install PHP
         uses: "shivammathur/setup-php@v2"
         with:
           coverage: "none"
           php-version: "${{ matrix.php-version }}"
           tools: composer:v2
 
-      - name: "Validate composer.json"
+      - name: Validate composer.json
         run: "composer validate --strict --no-check-lock"
 
-  php-cs-fixer:
+  php-coding-standards-test:
     needs:
-      - "composer-validate"
-
-    name: "PHP-CS-Fixer (${{ matrix.php-version }})"
-
+      - composer-validate
+    name: "PHP Coding Standards Tests (${{ matrix.php-version }})"
     runs-on: "ubuntu-latest"
-
     strategy:
       matrix:
         php-version:
           - '8.0'
-
     steps:
       - name: "Checkout code"
         uses: "actions/checkout@v2"
@@ -63,19 +57,15 @@ jobs:
       - name: Run Code Standard Test
         run: composer run-script check-code-standards
 
-  phpstan:
+  php-static-analysis-test:
     needs:
-      - "composer-validate"
-
-    name: "PHPStan (${{ matrix.php-version }})"
-
+      - composer-validate
+    name: "PHP Static Analysis Tests (${{ matrix.php-version }})"
     runs-on: "ubuntu-latest"
-
     strategy:
       matrix:
         php-version:
           - '7.4'
-
     steps:
       - name: "Checkout code"
         uses: "actions/checkout@v2"
@@ -95,12 +85,11 @@ jobs:
       - name: PHPStan Test
         run: composer run-script analyze
 
-  php-test-suite:
-    name: "Tests PHP ${{ matrix.php-version }} + ${{ matrix.dependency }}"
+  php-unit-test:
+    name: "PHP Unit Tests ${{ matrix.php-version }} + ${{ matrix.dependency }}"
     needs:
-      - "composer-validate"
+      - composer-validate
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         php-version:
@@ -111,16 +100,12 @@ jobs:
         include:
           - php-version: '8.0'
             submit-coverage: 'yes'
-
     steps:
       - name: "Checkout code"
         uses: actions/checkout@v2
 
       - name: PHP Info
         run: php --version
-
-      - name: Validate composer.json and composer.lock
-        run: composer validate --strict
 
       - name: Cache Composer packages
         uses: actions/cache@v2
@@ -136,22 +121,79 @@ jobs:
       - name: Run PHP Unit Tests
         run: composer run-script test
 
-      - name: Run PHP Benchmark Tests
-        run: composer run-script benchmark
-
-      - name: Run LuckByDice bin test
-        run: php ./bin/luckbydice 1d2,3d6*2+2 0
-
       - name: Submit code coverage
         if: matrix.submit-coverage == 'yes'
         run: bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }} -f tests/output/clover.xml
 
-  dockerfile-validate:
-    name: "Validate Dockerfile"
+  php-benchmark-test:
+    name: "PHP Benchmark Tests ${{ matrix.php-version }} + ${{ matrix.dependency }}"
     needs:
-      - phpstan
-      - php-cs-fixer
-      - php-test-suite
+      - composer-validate
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php-version:
+          - '7.2'
+          - '7.3'
+          - '7.4'
+          - '8.0'
+    steps:
+      - name: "Checkout code"
+        uses: actions/checkout@v2
+
+      - name: Cache Composer packages
+        uses: actions/cache@v2
+        with:
+          path: vendor
+          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-php-
+
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress
+
+      - name: Run PHP Benchmark Tests
+        run: composer run-script benchmark
+
+  php-feature-test:
+    name: "PHP Feature Test ${{ matrix.php-version }} + ${{ matrix.dependency }}"
+    needs:
+      - composer-validate
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php-version:
+          - '7.2'
+          - '7.3'
+          - '7.4'
+          - '8.0'
+    steps:
+      - name: "Checkout code"
+        uses: actions/checkout@v2
+
+      - name: Cache Composer packages
+        uses: actions/cache@v2
+        with:
+          path: vendor
+          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-php-
+
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress
+
+      - name: Run LuckByDice bin test
+        run: php ./bin/luckbydice 1d2,3d6*2+2 0
+
+  dockerfile-validate:
+    name: "Dockerfile Validate"
+    needs:
+      - composer-validate
+      - php-coding-style-test
+      - php-static-analysis-test
+      - php-unit-test
+      - php-benchmark-test
+      - php-feature-test
     runs-on: ubuntu-latest
     steps:
       - name: Get files changed
@@ -166,10 +208,10 @@ jobs:
           dockerfile: Dockerfile
 
   docker-hub:
-    name: "Push to DockerHub"
+    name: "Push to Docker Hub"
     environment: CI
     needs:
-      - "dockerfile-validate"
+      - dockerfile-validate
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -200,9 +242,11 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - composer-validate
-      - php-cs-fixer
-      - phpstan
-      - php-test-suite
+      - php-coding-style-test
+      - php-static-analysis-test
+      - php-unit-test
+      - php-benchmark-test
+      - php-feature-test
       - dockerfile-validate
       - docker-hub
     steps:
@@ -212,14 +256,14 @@ jobs:
         with:
           slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
           slack-channel: ${{ secrets.SLACK_CHANNEL_ID }}
-          slack-emoji-name: green_circle
-          slack-optional-icon_emoji: ":fire:"
           slack-text: |
             Event "${{ github.event_name }}" in "${{ github.repository }}" by @${{ github.actor }}
             Commit ${{ github.sha }}
-            ${{ needs.composer-validate.result == 'success' && ':large_green_circle:' || ':red-circle:' }} Composer Validate
-            ${{ needs.php-cs-fixer.result == 'success' && ':large_green_circle:' || ':red-circle:' }} PHP CS Fixer
-            ${{ needs.phpstan.result == 'success' && ':large_green_circle:' || ':red-circle:' }} PHP Stan
-            ${{ needs.php-test-suite.result == 'success' && ':large_green_circle:' || ':red-circle:' }} PHP Test Suite
-            ${{ needs.dockerfile-validate.result == 'success' && ':large_green_circle:' || ':red-circle:' }} Docker Validate
-            ${{ needs.docker-hub.result == 'success' && ':large_green_circle:' || ':red-circle:' }} Docker Hub
+            ${{ needs.composer-validate.result == 'success' && ':white_check_mark:' || ':no_entry_sign:' }} Composer Validate.
+            ${{ needs.php-coding-style-test.result == 'success' && ':white_check_mark:' || ':no_entry_sign:' }} PHP Coding Style Tests
+            ${{ needs.php-static-analysis-test.result == 'success' && ':white_check_mark:' || ':no_entry_sign:' }} PHP Static Analysis Tests
+            ${{ needs.php-unit-test.result == 'success' && ':white_check_mark:' || ':no_entry_sign:' }} PHP Unit Test.
+            ${{ needs.php-benchmark-test.result == 'success' && ':white_check_mark:' || ':no_entry_sign:' }} PHP Benchmark Test.
+            ${{ needs.php-feature-test.result == 'success' && ':white_check_mark:' || ':no_entry_sign:' }} PHP Feature Test.
+            ${{ needs.dockerfile-validate.result == 'success' && ':white_check_mark:' || ':no_entry_sign:' }} Dockerfile Validate.
+            ${{ needs.docker-hub.result == 'success' && ':white_check_mark:' || ':no_entry_sign:' }} Docker Hub.
